--- a/stage9/templates/stage9/stage9_login.html
+++ b/stage9/templates/stage9/stage9_login.html
@@ -1,3 +1,5 @@
+{% load socialaccount %}
+{% providers_media_js %}
 {% if user.is_authenticated %}
     <p>Hi: {{ request.user.username }}</p>
     <a href="{% url "account_logout" %}">Logout</a>
@@ -14,4 +16,5 @@
         <button type="submit">Login</button>
         <a href="{% url 'account_reset_password' %}">Forgot Password?</a>
     </form>
+    <a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Connect</a>
 {% endif %}
