--- a/stage9/static/stage9/css/style.css
+++ b/stage9/static/stage9/css/style.css
@@ -219,8 +219,8 @@ p {
 }
 
 .container_info {
-    position: relative;
-    display: inline-block;
+    position: fixed;
+    display: none;
     top: 90px;
     width: 100%;
     height: 60px;
@@ -233,7 +233,7 @@ p {
     clear: both;
     width: 100%;
     height: 420px;
-    top: 85px;
+    top: 150px;
     right: 0px;
     left: 0px;
 }
@@ -246,6 +246,7 @@ p {
     top: 0px;
     height: 90px;
     background: #434343;
+    z-index: 1;
 }
 
 .downer {
@@ -285,8 +286,10 @@ p {
 }
 
 .liner {
+    position: absolute;
     height: 2px;
     background: black;
+    bottom: 0px;
 }
 
 .menu_liner {
