--- a/stage9/templates/stage9/home.html
+++ b/stage9/templates/stage9/home.html
@@ -4,7 +4,8 @@
     <h1>HELLO WORLD</h1>
     <ul>
         <p><a href="{% url 'polls:index' %}">Go deeper?</a></p>
-       <p><a href="{% url 'account_login' %}">Login</a></p>
+        <p><a href="{% url 'account_login' %}">Login</a></p>
+        <p><a href="{% url 'cooks:list' %}">LOOK AT RECIPES</a></p>
     </ul>
 
 {% endblock %}
