--- a/stage9/static/stage9/css/style.css
+++ b/stage9/static/stage9/css/style.css
@@ -48,6 +48,24 @@ p {
   color: #ffffff;
 }
 
+a {
+  color:inherit;
+  text-decoration: none;
+ }
+
+a:hover {
+  color:inherit;
+  text-decoration: none;
+ }
+a:visited {
+  color:inherit;
+  text-decoration: none;
+ }
+a:active {
+  color:inherit;
+  text-decoration: none;
+ }
+
 .links_footer {
     display: inline-block;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -315,6 +333,37 @@ p {
     color: white;
     margin-left: 10px;
 }
+
+.cook_item {
+    display: inline-block; border: 3px solid #434343;
+    width: 200px; height: 200px;
+    margin-right: 10px; margin-top: 20px;
+    padding: 5px;
+}
+
+.cook_item_cont {
+    position: relative;
+    width: 100%; height: 100%;
+    overflow:hidden;
+}
+
+.cook_item_back {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position:center;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+}
+
+.cook_item :hover {
+    opacity: 0.9;
+}
+
 
 .mini_links {
     font-weight: 300;
