--- a/cooks/templates/cooks/cooks_list.html
+++ b/cooks/templates/cooks/cooks_list.html
@@ -1,6 +1,7 @@
 {% extends "stage9/base.html" %}
 
 {% block content %}
+    <div id="search-results11">
     {% for recipe in recipe_list %}
         <a href="{% url 'cooks:detail' recipe.id %}">
             <div class="cook_item">
@@ -17,5 +18,6 @@
             </div>
         </a>
     {% endfor %}
+    </div>
 {%  endblock %}
 
