select forms to search

--- a/cooks/templates/cooks/cooks_list.html
+++ b/cooks/templates/cooks/cooks_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div id="search-results11">
     {% for recipe in recipe_list %}
-        <a href="{% url 'cooks:detail' recipe.id %}">
+        <a href="{% url 'cooks:detail' recipe.title %}">
             <div class="cook_item">
                 <div class="cook_item_cont" >
                     <h3>{{ recipe.title }}</h3>
@@ -12,8 +12,11 @@
                     {% for ingredient in recipe.ingredients.all %}
                         <p style="display:inline-block">{{ ingredient.ingredient }} ,</p>
                     {% endfor %}
-                <div class="cook_item_back" style="background-image: url({{ MEDIA_URL }}{{ recipe.photo }});">
-                </div>
+                {% if recipe.photo %}
+                <div class="cook_item_back" style="background-image: url({{ MEDIA_URL }}{{ recipe.photo }});"></div>
+                {% else %}
+                <div class="cook_item_back"></div>
+                {% endif %}
                 </div>
             </div>
         </a>
