--- a/cooks/templates/cooks/cook_detail.html
+++ b/cooks/templates/cooks/cook_detail.html
@@ -2,7 +2,11 @@
 
 {% block content %}
     <div class="cook_detail">
+        {% if recipe.photo %}
         <img src="{{ MEDIA_URL }}{{ recipe.photo }}" style="display: inline-block; height: 300px; width: 300px;">
+        {% else %}
+        <h4>NO PHOTO</h4>
+        {% endif %}
         <div class="cook_cont" style="display:inline-block; width: 400px">
             <h1>{{ recipe.title }}</h1>
             <h3>{{ recipe.summary }}</h3>
