--- a/stage9/templates/stage9/home.html
+++ b/stage9/templates/stage9/home.html
@@ -6,7 +6,27 @@
         <h4>SEARCH:</h4>
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="text" name="tags" id="search_recipe" title="search" style="background-image: url({% static 'stage9/img/fridge-icon.png' %});" class="myTags" readonly />
+        <input type="text" name="tags" id="search_ingredient" title="search" style="background-image: url({% static 'stage9/img/fridge-icon.png' %});" class="myTags" readonly />
+        <h5 style="display: inline-block">Cuisine</h5>
+        <select style="margin-right: 14px;" name="cuisine" id="search_cuisine" class="multiselect" title="search">
+            <option selected disabled hidden>Choose Cousine</option>
+            <option value="">All</option>
+            {% for value, key in fields.CUISINE %}
+                <option value="{{ value }}">
+                    {{ key }}
+                </option>
+            {% endfor %}
+        </select>
+        <h5 style="display: inline-block">Meal type</h5>
+        <select name="mealtype" id="search_mealtype" class="multiselect" title="search">
+            <option selected disabled hidden>Choose Meal Type</option>
+            <option value="">All</option>
+            {% for value, key in fields.MEALTYPE %}
+                <option value="{{ value }}">
+                    {{ key }}
+                </option>
+            {% endfor %}
+        </select>
     </div>
     <hr>
     <h4>RESULTS:</h4>
