--- a/stage9/templates/stage9/ajax_search.html
+++ b/stage9/templates/stage9/ajax_search.html
@@ -1,7 +1,7 @@
 <div onload="showPage()" style="display:none;" id="myDiv" class="animate-bottom">
 {% if recipe_list_search.count > 0 %}
     {% for recipe in recipe_list_search %}
-        <a href="{% url 'cooks:detail' recipe.title %}">
+        <a href="{% url 'cooks:detail' recipe.title %}" target="_blank">
             <div class="cook_item">
                 <div class="cook_item_cont" >
                     <h3>{{ recipe.title }}</h3>
