--- a/stage9/templates/stage9/stage9_login.html
+++ b/stage9/templates/stage9/stage9_login.html
@@ -1,11 +1,12 @@
 {% if user.is_authenticated %}
-    <div style="display: inline; width: 200px; max-height: inherit; position: absolute; right:100px;" >
+    {% load friendshiptags %}
+    <div style="display: inline; width: 300px; max-height: inherit; position: absolute; right:100px;" >
         <div style="display: inline-block; margin-right: 20px;">
-            <p>Hi: {{ request.user.username }}</p>
+            <p>Hi {{ request.user.username }}</p>
             <a href="{% url 'profiles:profile' %}">My profile   /</a>
             <a href="{% url "account_logout" %}">Logout</a>
         </div>
-        <img style=" position: absolute; height: 50px; width: 50px; display: inline;" src="{{ request.user.profile.profile_image_url }}" alt="profile picture">
+        <a href="{% url 'profiles:profile' %}"><img style=" position: absolute; height: 50px; width: 50px; display: inline;" src="{{ request.user.profile.profile_image_url }}" alt="profile picture"></a>
     </div>
 {% else %}
     {% load socialaccount %}
