--- a/allauth/templates/account/account_update.html
+++ b/allauth/templates/account/account_update.html
@@ -12,7 +12,7 @@
                 <div class="divider"></div>
                 {{ formset.management_form }}
                     {{ formset.as_p }}
-                <button type="submit" class="btn-floating btn-large waves-light waves-effect"><i class="large material-icons">done</i></button>
+                <button type="submit" class="btn-floating btn-large waves-light waves-effect"><i class="large">done</i></button>
                 <a href="#" onclick="window.history.back(); return false;" title="Cancel" class="btn-floating waves-effect waves-light red"><i class="material-icons">history</i></a>
 
             </form>
