--- a/stage9/static/stage9/css/style.css
+++ b/stage9/static/stage9/css/style.css
@@ -171,6 +171,18 @@ a:active {
     border-radius: 6px;
 }
 
+.back_bt {
+    display: inline;
+    border: 1px solid #555555;
+    background: #e6e6e6;
+    font-weight: normal;
+    border-radius: 6px;
+    padding: 5px;
+    bottom: 10px;
+    right: 10px;
+    position: absolute;
+}
+
 .item_ingredient:hover {
     cursor:pointer;
     border: 1px solid #555555;
@@ -396,6 +408,23 @@ a:active {
     padding: 5px;
 }
 
+.cook_cont {
+    display: inline-block;
+    max-width: 400px;
+    margin-right: 10px; margin-top: 20px;
+}
+
+.cook_detail {
+    display: inline-block; border: 1px solid #434343;
+    margin-right: 10px; margin-top: 20px;
+    padding: 5px;
+    background: #f0f8ff;
+    border-radius: 6px;
+    width: 700px;
+    min-height: 400px;
+    position: relative;
+}
+
 .cook_item_cont {
     position: relative;
     width: 100%; height: 100%;
@@ -429,6 +458,10 @@ a:active {
 .mini_links_menu {
     font-weight: 300;
     color: white;
+}
+
+#id_honeypot {
+    display: none;
 }
 
 @media (max-width: 1199px) {
