--- a/stage9/templates/stage9/base.html
+++ b/stage9/templates/stage9/base.html
@@ -116,7 +116,7 @@
             <div class="liner" style="position: fixed;"></div>
 
             <div class="container_body">
-                    <div class="col-md-10 cont"> <!-- content !-->
+                    <div class="col-md-10 cont" style="padding-right: 40px;"> <!-- content !-->
                         {% block content %}{% endblock %}
                     </div>
                     <div id="ingredients_choices" style="display: inline-block;  width: 20%;">
