--- a/comments/templates/comments/comment.html
+++ b/comments/templates/comments/comment.html
@@ -1,4 +1,5 @@
  {% if object.user %}
+    <p>{{ object.user.username }}</p>
 	<a href="{% url 'user' object.user %}"><img style="height: 50px; width: 50px; display: inline;" src="{{ object.user.profile.profile_image_url }}" alt="{{ object.user.username }}"></a>
 {% else %}
 	<p>By: Guest </p>
