--- a/comments/templates/comments/comment_form.html
+++ b/comments/templates/comments/comment_form.html
@@ -6,7 +6,7 @@
 		<form method="POST" action="{% url "comment-create" %}" class="add-comment-form">
 			{% csrf_token %}
 			{{ form.errors }}
-			{{ form.comment.label }}
+        <h4>Post a comment</h4>
 			<br>
 			{{ form.comment }}
 			{% if target %}	
